--- a/src/components/pages/ProjectCard/style.css
+++ b/src/components/pages/ProjectCard/style.css
@@ -7,9 +7,13 @@
 .card > .card-img-top{
   border-top-left-radius: 0px;
   border-top-right-radius: 0px;
+  width: 100%;
+  height: 15vw;
+  object-fit: cover;
 }
 
 .col-md-6 > .card,
-.col-lg-4 > .card{
+.col-lg-4 > .card,
+.container > .jumbotron{
   border-radius: 0px;
 }
