--- a/src/components/pages/ProjectCard/style.css
+++ b/src/components/pages/ProjectCard/style.css
@@ -1,3 +1,48 @@
+/* Colors */
+/* body{
+  background-color: #212529;
+  color: bisque;
+} */
+body.text-main{
+  color: rgb(69, 133, 69);
+}
+/* 
+div h1,div h2,div h3,div h4,div h5, div strong{
+  color:  tomato;
+} */
+
+.nav-tabs .nav-item .nav-link.active {
+  color:  #212529;
+  background-color: tomato;
+  border-color: tomato;
+}
+
+.nav.nav-tabs {
+  border-bottom: 1px solid tomato;
+}
+
+.nav .nav-item > a,
+div > .btn{
+  color: tomato;
+  border-radius: 0px;
+}
+
+.nav .nav-item > a:hover{
+  border: 1px solid tomato;
+}
+
+.nav .nav-item > a:hover,
+div > .btn:hover{
+  color: orangered;
+}
+
+.container .card{
+  border: 0px;
+}
+.card img{
+  border: 2px solid tomato;
+}
+
 /* de-bootstrapping */
 .row > .col-md-6,
 .row > .col-md-4{
@@ -8,7 +53,7 @@
   border-top-left-radius: 0px;
   border-top-right-radius: 0px;
   width: 100%;
-  height: 15vw;
+  height: 30vh;
   object-fit: cover;
 }
 
