--- a/src/components/pages/ProjectCard/style.css
+++ b/src/components/pages/ProjectCard/style.css
@@ -62,3 +62,25 @@ div > .btn:hover{
 .container > .jumbotron{
   border-radius: 0px;
 }
+
+.stripe{
+  background: repeating-linear-gradient(
+  35deg,
+  #ffc107fa,
+  #ffc107fa 2vw,
+  #000000 2vw,
+  #000000 4vw
+  );
+  position: fixed;
+  bottom: 0;
+  left: 0;
+  width: 100%;
+  height: 7vw;
+  transform: skewY(-30deg);
+  z-index: 9999;
+  text-align: center;
+  color: rgb(69, 133, 69);
+  text-align: end;
+  padding-right: 10vw;
+  font-size: 4vw;
+}
